--- a/Client/src/ui/Login.fxml
+++ b/Client/src/ui/Login.fxml
@@ -13,12 +13,13 @@
 * Medizininformatik BSc</br>
 * Modul Living Case 2</br>
 *
-*<p>Class Description</p>
+*<p>GUI des Loginfensters fuer den Stations- und den Spitalapothekenclient</p>
 *
 * @author Patrizia Zehnder, patriziasusanna.zehnder@students.bfh.ch
 * @version 04-11-2014
 -->
 
+<!-- Start Loginfenster -->
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="316.0" prefWidth="500.0" styleClass="background" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="ui.LoginController">
     <children>
         <AnchorPane id="anchorPane2" prefHeight="300.0" prefWidth="500.0" styleClass="top-segment" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -28,9 +29,9 @@
                         <AnchorPane id="AnchorPane" prefHeight="180.0" prefWidth="430.0">
                             <children>
                                 <Label id="label1" layoutX="14.0" layoutY="67.0" text="Username" />
-                                <TextField id="textField1" fx:id="userId" layoutY="86.0" prefWidth="415.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" />
+                                <TextField id="usernameField" fx:id="userId" layoutY="86.0" prefWidth="415.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" />
                                 <Label id="label1" layoutX="14.0" layoutY="139.0" text="Password" />
-                                <PasswordField id="passwordField1" fx:id="password" layoutY="157.0" prefWidth="415.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" />
+                                <PasswordField id="passwordField" fx:id="password" layoutY="157.0" prefWidth="415.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" />
                             </children>
                         </AnchorPane>
                     </children>
@@ -45,3 +46,4 @@
         </HBox>
     </children>
 </AnchorPane>
+<!-- Ende Loginfenster -->
