CheckInButton, Header Bar, BackButton

--- a/Client/src/ui/main.fxml
+++ b/Client/src/ui/main.fxml
@@ -6,7 +6,10 @@
 
 <AnchorPane prefHeight="200.0" prefWidth="300.0" xmlns:fx="http://javafx.com/fxml" fx:controller="ui.MainController">
     <children>
-        <Label fx:id="headerLabel" maxWidth="1.7976931348623157E308" text="Header" VBox.vgrow="NEVER" />
+        <Label id="lblUserName" fx:id="userField" layoutX="721.0" layoutY="2.0" prefHeight="31.0" prefWidth="159.0" text="User: zehnp1" textFill="#2b5bae" AnchorPane.rightAnchor="79.0" AnchorPane.topAnchor="2.0" />
+        <Button mnemonicParsing="false" text="Logout" textAlignment="RIGHT" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0" />
+        <Label id="lblCurrentDate" fx:id="dateTimeField" layoutX="286.0" layoutY="5.0" prefHeight="31.0" prefWidth="235.0" text="27.10.2014; 15:01 Uhr" textFill="#2b5bae" AnchorPane.leftAnchor="286.0" AnchorPane.topAnchor="5.0" />
+        <Label id="lblLocationInfo" fx:id="locationField" prefHeight="31.0" prefWidth="135.0" text="StationA" textFill="#2b5bae" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="5.0" />
         <StackPane fx:id="vistaHolder" VBox.vgrow="ALWAYS" />
     </children>
 </AnchorPane>
