--- a/Client/src/ui/CheckedInItemsView.fxml
+++ b/Client/src/ui/CheckedInItemsView.fxml
@@ -44,9 +44,9 @@
                     </children>
                 </AnchorPane>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="304.0" prefWidth="400.0">
-                                        <TableView id="listData" fx:id="medList" layoutX="-1.0" prefHeight="246.0" prefWidth="199.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                        <TableView id="itemListData" fx:id="itemList" layoutX="-1.0" prefHeight="246.0" prefWidth="199.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                             <columns>
-                                                <TableColumn id="listScannedItems" fx:id="tableColName" prefWidth="100.0" text="Name" />
+                                                <TableColumn id="listCkeckedInItems" fx:id="tableColName" prefWidth="100.0" text="Name" />
                                                 <TableColumn fx:id="tableColMenge" prefWidth="100.0" text="Menge" />
                                                 <TableColumn fx:id="tableColGTIN" prefWidth="150.0" text="GTIN" />
                                                 <TableColumn fx:id="tableColSerial" prefWidth="150.0" text="Serial" />
