--- a/Client/src/ui/CheckedInItemsView.fxml
+++ b/Client/src/ui/CheckedInItemsView.fxml
@@ -8,12 +8,12 @@
 <?import javafx.scene.control.*?>
 
 <!--
-* Berner Fachhochschule</br>
-* Medizininformatik BSc</br>
-* Modul Living Case 2</br>
+* Bern University of Applied Sciences</br>
+* BSc Medical Informatics</br>
+* Module Living Case 2</br>
 *
-*<p>Dies View soll einen Überblick über die bereits eingescannten Items einer spezifischen Global Location Number (GLN) bieten.
-Die Daten werden tabellarisch aufbereitet.</p>
+*<p>This view provides an overview about the scanned items of a given global location number (GLN).
+The data is shown in a table.</p>
 *
 * @author Patrick Hirschi, patrick.hirschi@students.bfh.ch
 * @version 10-12-2014
